"""
LSTM Model for price prediction
Wraps the custom LSTM implementation for gRPC service
"""
import numpy as np
import pickle
import os
from typing import Dict, Any, Optional
import logging

logger = logging.getLogger(__name__)


class LSTMPredictor:
    """LSTM-based price predictor"""

    def __init__(self, model_path: Optional[str] = None):
        self.model = None
        self.metadata = None
        self.is_trained = False

        if model_path and os.path.exists(model_path):
            self.load_model(model_path)
        else:
            logger.warning("LSTM model not loaded. Using mock predictions.")

    def load_model(self, model_path: str):
        """Load trained LSTM model"""
        try:
            model_file = os.path.join(model_path, 'lstm_model.pkl')
            metadata_file = os.path.join(model_path, 'metadata.pkl')

            with open(model_file, 'rb') as f:
                self.model = pickle.load(f)

            with open(metadata_file, 'rb') as f:
                self.metadata = pickle.load(f)

            self.is_trained = True
            logger.info(f"LSTM model loaded from {model_path}")
            logger.info(f"Model metrics - MAE: ${self.metadata['mae']:.2f}, "
                       f"Direction Accuracy: {self.metadata['direction_accuracy']:.2f}%")
        except Exception as e:
            logger.error(f"Failed to load LSTM model: {e}")
            self.is_trained = False

    def predict(self,
                candles: np.ndarray,
                indicators: Optional[Dict] = None,
                sentiment_score: float = 0.0,
                timeframe: str = '1h') -> Dict[str, Any]:
        """
        Predict price direction

        Args:
            candles: Array of shape (n, 5) with [open, high, low, close, volume]
            indicators: Dictionary of indicator values
            sentiment_score: Sentiment score from -1 to 1
            timeframe: Trading timeframe

        Returns:
            Dictionary with prediction results
        """
        if not self.is_trained:
            # Mock prediction for testing
            return self._mock_prediction(candles, sentiment_score)

        try:
            # TODO: Implement full prediction pipeline
            # 1. Feature engineering
            # 2. Normalization
            # 3. Sequence preparation
            # 4. Model prediction
            # 5. Post-processing

            return self._mock_prediction(candles, sentiment_score)

        except Exception as e:
            logger.error(f"LSTM prediction error: {e}")
            return self._mock_prediction(candles, sentiment_score)

    def _mock_prediction(self, candles: np.ndarray, sentiment: float) -> Dict[str, Any]:
        """Generate mock prediction for testing"""
        # Simple momentum-based mock
        if len(candles) < 2:
            direction = 'NEUTRAL'
            probability = 0.5
        else:
            recent_change = (candles[-1, 3] - candles[-10, 3]) / candles[-10, 3]

            if recent_change > 0.01:
                direction = 'UP'
                probability = 0.55 + min(recent_change * 5, 0.2)
            elif recent_change < -0.01:
                direction = 'DOWN'
                probability = 0.55 + min(abs(recent_change) * 5, 0.2)
            else:
                direction = 'NEUTRAL'
                probability = 0.5

            # Adjust with sentiment
            if sentiment > 0.3 and direction == 'UP':
                probability = min(probability + 0.1, 0.95)
            elif sentiment < -0.3 and direction == 'DOWN':
                probability = min(probability + 0.1, 0.95)

        expected_move = recent_change * 100 if len(candles) >= 2 else 0.0

        return {
            'direction': direction,
            'probability': float(probability),
            'confidence': float(probability * 0.9),  # Slightly lower confidence
            'expected_move': float(expected_move),
            'model': 'LSTM-Mock'
        }
